[package]
name = "flux"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
fnv = "1.0.7"
gif = "0.13.1"
image = "0.25.1"
imageproc = "0.25.0"
libc = "0.2.155"
lqr = { git = "https://github.com/Jacherr/lqr" }
num-rational = "0.4.2"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
signal-hook = "0.3.17"
thiserror = "1.0.61"
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }
zip = "2.1.3"

[profile.release]
debug = true
